--- a/views/tasks.html
+++ b/views/tasks.html
@@ -156,6 +156,77 @@ public class TaskFive {
 }
 </textarea>
 
+<textarea hidden id="taskThreeText-reset">
+  public class TaskThree {
+      public static void main(String[] args) {
+          TaskThree taskThree = new TaskThree();
+          taskThree.doIt();
+      }
+  
+      public void doIt() {
+          int a = 7;
+          int b = 5;
+  
+          // TODO: Change the condition such that "a/b" is equal to 1.4.
+          if (a/b == 1.4) {
+              System.out.println("Woho, a/b has the correct value!");
+          } else {
+              System.out.println("Oh no, a/b should be " + 1.4 + " but is " + a/b);
+          }
+      }
+  
+  }
+  </textarea>
+
+  <textarea hidden id="taskFourText-reset">
+    public class TaskFour {
+        public static void main(String[] args) {
+            TaskFour taskFour = new TaskFour();
+            taskFour.doIt();
+        }
+    
+        public void doIt() {
+            // TODO: Change the if-condition "(strings.length > 0 & strings[0].equals("java"))" such that the ArrayIndexOutOfBoundsException is avoided. (The list *should* be empty!)
+            String[] strings = new String[]{};
+            if (strings.length > 0 & strings[0].equals("java")) {
+                System.out.println("Uh oh, we should have an empty list!");
+            } else {
+                System.out.println("Woho! You avoided the ArrayIndexOutOfBoundsException, good job! :)" );
+            }
+        }
+    
+    }
+    </textarea>
+
+<textarea hidden id="taskFiveText-reset">
+  import java.util.ArrayList;
+  
+  public class TaskFive {
+      public static void main(String[] args) {
+          TaskFive taskFive = new TaskFive();
+          taskFive.doIt(false);
+      }
+  
+      private ArrayList<Integer> list = new ArrayList<>();
+  
+      public void doIt(boolean shouldAddToList) {
+          list = new ArrayList<>();
+  
+          // TODO: Make changes to the if-statement below such that no numbers are added to the list. (Both numbers should be added if shouldAddToList is true!)
+          if (shouldAddToList)
+              list.add(1);
+              list.add(2);
+  
+          // This should *not* be changed in this task!
+          if (list.isEmpty()) {
+              System.out.println("Woho, the list is empty!");
+          } else {
+              System.out.println("This list should be empty, but is " + list);
+          }
+      }
+  }
+  </textarea>
+
     <button type="button" id="buttonInput">Check code</button>
     <button type="button" id="buttonGetTips">Get tip</button>
     <button type="button" id="buttonPreviousTask">Previous task</button>
@@ -184,7 +255,11 @@ function clearAllFields() {
 
 let taskNumber = 0;
 const taskNames = ["taskOneText", "taskTwoText", "taskThreeText", "taskFourText", "taskFiveText"];
+const taskNames_reset = ["taskOneText-reset", "taskTwoText-reset", "taskThreeText-reset", "taskFourText-reset", "taskFiveText-reset"];
 let shouldUpdateEditor = true;
+let TASK_FOUR_NUMBER = 3;
+let TASK_FIVE_NUMBER = 4;
+let outputFromRunnedFile = "";
 
 document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
 
@@ -359,9 +434,6 @@ document.getElementById('editor').addEventListener('keydown', event => {
     highlightSyntax();
     observer.observe(editor, config);
 
-    let outputFromRunnedFile = "";
-    let containingClass = "";
-
     const data = document.getElementById("editor").textContent;
     clearAllFields();
     document.getElementById("positionText").textContent = "Running code....";
@@ -385,8 +457,9 @@ document.getElementById('editor').addEventListener('keydown', event => {
       document.getElementById("positionText").textContent = "Out: " + obj.out;
       outputFromRunnedFile = obj.out;
 
-      if (obj.error &&obj.error != "") {
+      if (obj.error && obj.error != "") {
         document.getElementById("suggestionText").textContent = "Error: " + obj.error;
+        outputFromRunnedFile = obj.error;
       }
       }
     );
@@ -409,18 +482,41 @@ document.getElementById('editor').addEventListener('keydown', event => {
       if (obj.hasException || obj.status == "errors") {
         document.getElementById("explanationText").textContent = "Solved task: No";
       } else {
-        if (outputFromRunnedFile.includes("This list should be empty, but is")) {
-          document.getElementById("explanationText").textContent = "Solved task: No";
-        } else {
+        if (haveSolvedTask(outputFromRunnedFile, taskNumber)) {
           document.getElementById("explanationText").textContent = "Solved task: Yes";
+        } else {
+          document.getElementById("explanationText").textContent = "Solved task: No";
         }
       }
     }
-    );
+  );
+}
+
+function haveSolvedTask(outputFromRunnedFile, taskNumber) {
+  if (taskNumber == TASK_FIVE_NUMBER) {
+    if (outputFromRunnedFile.includes("This list should be empty, but is")) {
+      return false;
+    }
+  }
+
+  if (taskNumber == TASK_FOUR_NUMBER) {
+    if (outputFromRunnedFile.includes("Exception in thread")) {
+      return false;
+    }
+  }
+  return true;
 }
 
   async function analyseCode() {
-    const data = document.getElementById("editor").textContent;
+    let data;
+    if (!haveSolvedTask(outputFromRunnedFile, taskNumber)) {
+      data = document.getElementById(taskNames_reset[taskNumber]).textContent;
+    } else {
+      data = document.getElementById("editor").textContent;
+    }
+
+    console.log("DATA:"+data);
+    
     clearAllFields();
     document.getElementById("positionText").textContent = "Analysing code....";
     await fetch('https://master-thesis-web-backend-prod.herokuapp.com/analyse', {
