--- a/views/tasks.html
+++ b/views/tasks.html
@@ -14,7 +14,7 @@
   a:visited {color:white; font-family: sans-serif;}
   a:active {color:gray; font-family: sans-serif;}
   ul {color:white; font-family: sans-serif}
-  .editor{min-width: 1500px; min-height: 50px; background-color: black; color:aliceblue; font-family: Verdana, sans-serif;; border: 2px solid gray; display: inline-block; font-size: 16px;}
+  .editor{min-width: 1500px; min-height: 50px; background-color: black; color:aliceblue; font-family: Verdana, sans-serif;; border: 2px solid gray; display: inline-block; font-size: 16px; resize:none; overflow: hidden;}
   .console{width: 1500px; height: fit-content; white-space: pre; background-color: black; color:aliceblue; font-family: Verdana, sans-serif; border: 2px solid gray; font-size: 16px;}
   .editorLines{width: fit-content; height: fit-content; white-space: pre; background-color: black; color:grey; font-family: Verdana, sans-serif; border: 2px solid gray; font-size: 16px;}
   .flex-container {
