adjust url to updated endpoint API

--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
     document.getElementById("tipText").textContent = "";
     document.getElementById("urllink").textContent = "";
     document.getElementById("urllink").href = "#";
-    await fetch('https://master-thesis-web-backend-prod.herokuapp.com/analyse/all', {
+    await fetch('https://master-thesis-web-backend-prod.herokuapp.com/analyse', {
       method: 'POST',
       headers: {
         'Content-Type': 'raw',
